# firebird

./: .gitignore  CMakeLists.txt  Firebird2Config.cmake.in  Firebird5Config.cmake.in  rm-pkg.sh
builds/cmake/: BuildFunctions.cmake  Configure.cmake  FixParserTokens.cmake  GenerateParser.cmake
builds/posix/: fbtrace.darwin.vers  firebird.darwin.client.vers  firebird.darwin.embed.vers  firebird.darwin.vers  firebird.exp  firebird.hpux.vers  firebird.vers
builds/win32/defs/: fbclient.def  fbclient_s.def  firebird.def  gds32.def
examples/: CMakeLists.txt
scripts/: generate_msgs.py
src/: CMakeLists.txt
src/alice/: alice_meta.cpp
src/alice/main/: aliceMain.cpp
src/auth/trusted/: AuthSspi.cpp
src/burp/: backup.cpp  burpMain.cpp  restore.cpp
src/burp/main/: burpMain.cpp
src/common/: StatusArg.cpp  StatusArg.h  StatusHolder.cpp  enc.cpp  isc.cpp  isc_sync.cpp  utils.cpp  xdr.cpp  xdr_proto.h
src/common/classes/: BaseStream.cpp  GenericMap.h  MetaName.h  NoThrowTimeStamp.h  RefCounted.h  TempFile.h  VaryStr.h  alloc.cpp  alloc.h  array.h  auto.h  fb_string.cpp  fb_string.h  init.h  sparse_bitmap.h  stack.h
src/common/config/: config.cpp
src/common/os/win32/: mod_loader.cpp
src/common/tests/: CommonTest.cpp
src/config/: ConfigFile.cpp  InputFile.cpp  Lex.cpp  Stream.cpp  StreamSegment.cpp
src/dsql/: DdlNodes.cpp  Parser.cpp  array.cpp  blob.cpp  dsql.tab.h  keywords.cpp  metd.cpp  parse.cpp  parse.y
src/dsql/pregenerated/: dsql_parse.cpp  dsql_parse.h
src/gpre/: gpre.cpp  gpre_meta_boot.cpp
src/gpre/boot/: gpre_meta_boot.cpp
src/include/firebird/: ibase.h
src/intl/: cs_icu.cpp  lc_icu.cpp
src/isql/: Extender.cpp  isql.epp
src/jrd/: CharSet.h  Collation.cpp  Database.cpp  GlobalRWLock.cpp  IntlUtil.cpp  IntlUtil.h  Optimizer.cpp  Optimizer.h  SimilarToMatcher.h  TempSpace.cpp  TempSpace.h  ThreadStart.cpp  blb.cpp  btn.cpp  btr.cpp  cmp.cpp  dfw.cpp  dpm.cpp  dyn.cpp  dyn.epp  dyn_def.cpp  dyn_del.cpp  dyn_mod.cpp  dyn_util.cpp  enc.cpp  fun.cpp  gds.cpp  gds_proto.h  grant.cpp  ibase.h  idx.h  ini.cpp  intl_classes.h  isc.cpp  jrd.cpp  met.cpp  nbak.cpp  pcmet.cpp  rpb_chain.h  rse.cpp  (+9 more)
src/jrd/extds/: IscDS.cpp
src/jrd/os/: mod_loader.h
src/jrd/os/darwin/: mod_loader.cpp
src/jrd/os/posix/: mod_loader.cpp
src/jrd/os/win32/: mod_loader.cpp
src/remote/: CMakeLists.txt  inet_server.cpp  interface.cpp  protocol.cpp  xdr.cpp  xdr.h  xdr_proto.h
src/remote/client/: interface.cpp
src/remote/os/win32/: cntl.cpp  srvr_w32.cpp  window.cpp
src/remote/server/os/posix/: inet_server.cpp
src/remote/server/os/win32/: cntl.cpp  srvr_w32.cpp  window.cpp
src/utilities/: fbsvcmgr.cpp  nbackup.cpp
src/utilities/fbcpl/: fbpanel.cpp
src/utilities/fbtracemgr/: traceMgrMain.cpp
src/utilities/gsec/main/: gsecMain.cpp
src/utilities/gstat/: dba.cpp
src/utilities/gstat/main/: gstatMain.cpp
src/utilities/install/: install.cpp  install_svc.cpp  registry.cpp
src/utilities/nbackup/main/: nbkMain.cpp
src/utilities/ntrace/: TraceUnicodeUtils.h
src/yvalve/: PluginManager.cpp  gds.cpp  gds_proto.h  why.cpp
